frontend/test/should_pass/pattern_empty.grg
pattern s
{
	alternative {
		l1 {
			.;
			modify {
				. --> .;
			}
		}
	}
}

pattern t
{
	iterated {
		.;
		
		modify {
		}
	}
}
