frontend/test/should_fail/negative_010.grg
pattern p
{
	negative {
        alternative {
			One {
				.;
				modify {
				}
			}
			Two {
				. -- .;
				modify {
				}
			}
        }
	}

	replace {
	}
}
